devscripts (2.9.24) UNRELEASED; urgency=low

  * debchange: allow non-official distributions (Closes: #397546)
  * debdiff: handle files moving between multiple packages correctly
    (Closes: #392977)
  * debuild: make -B -b work sensibly (Closes: #396232)
  * dget: improve manpage (Closes: #376237)
  * nmudiff: clean up properly, and abort on editor error
  * tagpending: make -v mean verbose; add long option names (Closes:
    #387293)
  * uscan: set HTTP user agent name (Closes: #397354)
  * wnpp-alert: check return status of wget calls (Closes: #364479)
  
 -- Julian Gilbey <jdg@debian.org>  Wed,  8 Nov 2006 16:42:23 +0000

devscripts (2.9.23) unstable; urgency=low

  * bts: automatically create cache directory when bts show is used
    (Closes: #370205)
  * debchange: can change urgency and distro using -D and -u flags
    (Closes: #373271)
  * debuild: check for either .orig.tar.gz or a .orig directory, as
    dpkg-source does (Closes: #366286)
  * dget: introduce --insecure option for allowing downloading from site
    with self-signed certificate (Closes: #393942)
  * nmudiff: much improved behaviour:
    - remove dependency on mutt (use /usr/sbin/sendmail instead)
    - automatically mail the relevant bugs rather than submit a new bug
      report; this can be changed using the --new command line option
    - allow for aborting, changing the bug number submitted to and editing
      the whole message
    - checking for errors rather than making a mess of things
    - cleaning up the manpage
    (Closes: #378264, #386147, #370056)
  * uscan: fix handling of ftp directory listings with number-only
    directory names (Closes: #372609)
  * uscan: warn if no parentheses in one-term version 2/3 watchfile
    (Closes: #375557)
  * uupdate: handle ~ in version numbers (Closes: #397100)
  * who-uploads: add GPG key ID to "unrecognised key" message (Closes:
    #397293)

 -- Julian Gilbey <jdg@debian.org>  Mon,  6 Nov 2006 18:11:46 +0000
