@@ -5,13 +5,15 @@ devscripts (2.9.24) UNRELEASED; urgency=low
     (Closes: #392977)
   * debuild: make -B -b work sensibly (Closes: #396232)
   * dget: improve manpage (Closes: #376237)
+  * dget: warn and exit with error if URL cannot be downloaded (Closes:
+    #376932)
   * nmudiff: clean up properly, and abort on editor error
   * tagpending: make -v mean verbose; add long option names (Closes:
     #387293)
   * uscan: set HTTP user agent name (Closes: #397354)
   * wnpp-alert: check return status of wget calls (Closes: #364479)
   
- -- Julian Gilbey <jdg@debian.org>  Wed,  8 Nov 2006 16:42:23 +0000
+ -- Julian Gilbey <jdg@debian.org>  Wed,  8 Nov 2006 18:01:18 +0000
 
 devscripts (2.9.23) unstable; urgency=low
 
